Added hosted URL link

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Welcome to the Star Trek Aliens API!</h1>
+    <h2>Make requests via https://star-trek-federation-field-guide.netlify.app/</h2>
 </body>
 </html>
